--- a/test.html
+++ b/test.html
@@ -265,7 +265,7 @@
             <button onclick="requestCode()">Request Code</button>
 
             <div class="form-group" style="margin-top: 20px">
-              <label for="apiKey">API Key (for verification):</label>
+              <label for="apiKey">Project ID (for verification):</label>
               <input
                 type="text"
                 id="apiKey"
@@ -1584,12 +1584,12 @@
       window.verifyCode = async function verifyCode() {
         const phone = document.getElementById("phone").value.trim();
         const code = document.getElementById("code").value.trim();
-        const apiKey = document.getElementById("apiKey").value.trim();
+        const projectId = document.getElementById("apiKey").value.trim();
 
-        if (!phone || !code || !apiKey) {
+        if (!phone || !code || !projectId) {
           showMessage(
             document.getElementById("authMessage"),
-            "Please enter phone, code, and API key",
+            "Please enter phone, code, and project ID",
             "error"
           );
           return;
@@ -1598,7 +1598,7 @@
         try {
           // Use custom base URL if set
           const baseUrl = window.customBaseUrl;
-          await window.BasebaseSDK.verifyCode(phone, code, apiKey, baseUrl);
+          await window.BasebaseSDK.verifyCode(phone, code, projectId, baseUrl);
           showMessage(
             document.getElementById("authMessage"),
             "Authentication successful! 🎉",
